--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,12 +10,12 @@
         android:id="@+id/cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
-        android:layout_marginLeft="59dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginLeft="47dp"
+        android:layout_marginTop="129dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginBottom="92dp"
         app:layout_constraintBottom_toTopOf="@+id/etFrontSize"
         app:layout_constraintEnd_toStartOf="@+id/etSound"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,28 +25,25 @@
         android:id="@+id/tb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:text="ToggleButton"
-        app:layout_constraintBottom_toTopOf="@+id/sb"
+        app:layout_constraintBaseline_toBaselineOf="@+id/etSound"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/etSound"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/etSound" />
 
     <EditText
         android:id="@+id/etSound"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="61dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginRight="19dp"
-        android:layout_marginBottom="146dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="78dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Sound"
-        app:layout_constraintBottom_toTopOf="@+id/btnSave"
+        app:layout_constraintBottom_toTopOf="@+id/sb"
         app:layout_constraintEnd_toStartOf="@+id/tb"
         app:layout_constraintStart_toEndOf="@+id/cb"
         app:layout_constraintTop_toTopOf="parent" />
@@ -55,35 +52,34 @@
         android:id="@+id/sb"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginBottom="536dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginBottom="132dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/etFrontSize"
-        app:layout_constraintTop_toBottomOf="@+id/tb" />
+        app:layout_constraintTop_toBottomOf="@+id/etSound" />
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginBottom="425dp"
+        android:layout_marginBottom="252dp"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/sb"
-        app:layout_constraintTop_toBottomOf="@+id/etSound" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sb" />
 
     <EditText
         android:id="@+id/etFrontSize"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginRight="23dp"
-        android:layout_marginBottom="541dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginLeft="47dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="432dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Front Size"
