--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -8,13 +8,9 @@
 
     <EditText
         android:id="@+id/etTitle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
         android:layout_marginBottom="34dp"
         android:ems="10"
         android:hint="Title"
@@ -26,55 +22,46 @@
 
     <EditText
         android:id="@+id/etSubject"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="65dp"
-        android:layout_marginLeft="65dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginRight="65dp"
-        android:layout_marginBottom="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="66dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Subject"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/sb"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/etPriority"
+        app:layout_constraintStart_toStartOf="@+id/etTitle"
         app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 
     <SeekBar
         android:id="@+id/sb"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginRight="65dp"
+        android:layout_width="356dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
         android:layout_marginBottom="68dp"
         app:layout_constraintBottom_toTopOf="@+id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/etPriority"
-        app:layout_constraintTop_toBottomOf="@+id/etSubject" />
+        app:layout_constraintTop_toBottomOf="@+id/etPriority" />
 
     <EditText
         android:id="@+id/etPriority"
-        android:layout_width="0dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginRight="29dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="44dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Priority"
-        app:layout_constraintBottom_toBottomOf="@+id/sb"
-        app:layout_constraintEnd_toStartOf="@+id/sb"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/sb"
+        app:layout_constraintEnd_toEndOf="@+id/sb"
+        app:layout_constraintStart_toStartOf="@+id/sb"
+        app:layout_constraintTop_toBottomOf="@+id/etSubject" />
 
     <Button
         android:id="@+id/btnSave"
-        android:layout_width="71dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="284dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="148dp"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
