--- a/app/src/main/res/layout/taskitem.xml
+++ b/app/src/main/res/layout/taskitem.xml
@@ -9,12 +9,12 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="226dp"
             android:background="#AEEAF1E0">
 
             <TextView
-                android:id="@+id/itmTvTittle"
+                android:id="@+id/itmTvTime"
                 android:layout_width="191dp"
                 android:layout_height="33dp"
                 android:layout_alignParentStart="true"
@@ -27,7 +27,7 @@
                 android:text="TextView" />
 
             <TextView
-                android:id="@+id/itmTvSubject"
+                android:id="@+id/itmTvDate"
                 android:layout_width="191dp"
                 android:layout_height="38dp"
                 android:layout_alignParentStart="true"
@@ -45,29 +45,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="220dp"
-                android:text="IsCompleted" />
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="110dp"
+                android:layout_marginLeft="110dp"
+                android:layout_marginBottom="3dp"
+                android:text="Delete" />
 
-            <RatingBar
-                android:id="@+id/itmRatingPriority"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="207dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
-                android:background="#918F92" />
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/itmImgInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_dialog_info" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
